test: add tests for CSRF and api internal/public access